Refine job id generator

--- a/java/openmldb-taskmanager/src/main/resources/taskmanager.properties
+++ b/java/openmldb-taskmanager/src/main/resources/taskmanager.properties
@@ -6,7 +6,7 @@ server.io_threads=4
 zookeeper.cluster=172.24.4.55:12200
 zookeeper.root_path=/openmldb
 zookeeper.session_timeout=5000
-zookeeper.connection_Timeout=5000
+zookeeper.connection_timeout=5000
 zookeeper.max_retries=10
 zookeeper.base_sleep_time=1000
 zookeeper.max_connect_waitTime=30000
@@ -16,7 +16,7 @@ hive.metastore.endpoint=thrift://127.0.0.1:9083
 batchjob.jar.path=hdfs:///Users/tobe/openmldb_batch_files/openmldb-batchjob-1.0-SNAPSHOT.jar
 #batchjob.jar.path=/Users/tobe/code/4pd/OpenMLDB/java/openmldb-batchjob/target/openmldb-batchjob-0.3.0.jar
 
-prefetch.job.num=100
+prefetch.jobid.num=10
 
 # Spark Config
 #spark.master=yarn
