--- a/java/openmldb-taskmanager/src/test/resources/taskmanager.properties
+++ b/java/openmldb-taskmanager/src/test/resources/taskmanager.properties
@@ -3,7 +3,7 @@ server.port=9902
 server.worker_threads=4
 server.io_threads=4
 
-zookeeper.cluster=127.0.0.1:6181
+zookeeper.cluster=127.0.0.1:2181
 zookeeper.root_path=/openmldb
 zookeeper.session_timeout=5000
 zookeeper.connection_Timeout=5000
@@ -20,4 +20,4 @@ spark.master=local
 spark.yarn.jars=
 spark.home=
 
-prefetch.job.num=10
+prefetch.jobid.num=10
