--- a/cases/plan/cmd.yaml
+++ b/cases/plan/cmd.yaml
@@ -357,3 +357,25 @@ cases:
         +-node[CMD]
           +-cmd_type: show job
           +-args: [1]
+  - id: stop_job_1
+    sql: stop JOB 10;
+    expect:
+      node_tree_str: |
+        +-node[CMD]
+          +-cmd_type: stop job
+          +-args: [10]
+  - id: stop_job_2
+    sql: stop JOB abc;
+    expect:
+      node_tree_str: |
+        +-node[CMD]
+          +-cmd_type: stop job
+          +-args: [abc]
+
+  - id: delete_job
+    sql: delete job 12;
+    expect:
+      node_tree_str: |
+        +-node[kDeleteStmt]
+          +-target: JOB
+          +-job_id: 12
