--- a/cases/plan/where_query.yaml
+++ b/cases/plan/where_query.yaml
@@ -300,7 +300,7 @@ cases:
 
   - id: like_predicate_1
     mode: request-unsupport
-    sql: SELECT col1 WHERE col2 LIKE 'kb';
+    sql: SELECT col1 from t1 WHERE col6 LIKE 'kb';
     expect:
       node_tree_str: |
         +-node[kQuery]: kQuerySelect
@@ -311,7 +311,7 @@ cases:
           |      +-0:
           |      |  +-expr[column ref]
           |      |    +-relation_name: <nil>
-          |      |    +-column_name: col2
+          |      |    +-column_name: col6
           |      +-1:
           |        +-expr[primary]
           |          +-value: kb
@@ -328,12 +328,16 @@ cases:
           |      |    +-relation_name: <nil>
           |      |    +-column_name: col1
           |      +-name: <nil>
-          +-tableref_list: []
+          +-tableref_list[list]:
+          |  +-0:
+          |    +-node[kTableRef]: kTable
+          |      +-table: t1
+          |      +-alias: <nil>
           +-window_list: []
 
   - id: like_predicate_2
     mode: request-unsupport
-    sql: SELECT col1 WHERE col2 LIKE 'kb' ESCAPE '\\';
+    sql: SELECT col1 from t1 WHERE col6 LIKE 'kb' ESCAPE '\\';
     expect:
       node_tree_str: |
         +-node[kQuery]: kQuerySelect
@@ -344,7 +348,7 @@ cases:
           |      +-0:
           |      |  +-expr[column ref]
           |      |    +-relation_name: <nil>
-          |      |    +-column_name: col2
+          |      |    +-column_name: col6
           |      +-1:
           |        +-expr[escape]
           |          +-pattern:
@@ -367,12 +371,16 @@ cases:
           |      |    +-relation_name: <nil>
           |      |    +-column_name: col1
           |      +-name: <nil>
-          +-tableref_list: []
+          +-tableref_list[list]:
+          |  +-0:
+          |    +-node[kTableRef]: kTable
+          |      +-table: t1
+          |      +-alias: <nil>
           +-window_list: []
 
   - id: like_predicate_3
     mode: request-unsupport
-    sql: SELECT col1 WHERE col2 NOT LIKE '%k_' ESCAPE '&';
+    sql: SELECT col1 from t1 WHERE col6 NOT LIKE '%k_' ESCAPE '&';
     expect:
       node_tree_str: |
         +-node[kQuery]: kQuerySelect
@@ -386,7 +394,7 @@ cases:
           |            +-0:
           |            |  +-expr[column ref]
           |            |    +-relation_name: <nil>
-          |            |    +-column_name: col2
+          |            |    +-column_name: col6
           |            +-1:
           |              +-expr[escape]
           |                +-pattern:
@@ -409,11 +417,15 @@ cases:
           |      |    +-relation_name: <nil>
           |      |    +-column_name: col1
           |      +-name: <nil>
-          +-tableref_list: []
+          +-tableref_list[list]:
+          |  +-0:
+          |    +-node[kTableRef]: kTable
+          |      +-table: t1
+          |      +-alias: <nil>
           +-window_list: []
   - id: like_predicate_4
     mode: request-unsupport
-    sql: SELECT col1 WHERE col2 NOT LIKE '%k_' ESCAPE '';
+    sql: SELECT col1 from t1 WHERE col6 NOT LIKE '%k_' ESCAPE '';
     expect:
       node_tree_str: |
         +-node[kQuery]: kQuerySelect
@@ -427,7 +439,7 @@ cases:
           |            +-0:
           |            |  +-expr[column ref]
           |            |    +-relation_name: <nil>
-          |            |    +-column_name: col2
+          |            |    +-column_name: col6
           |            +-1:
           |              +-expr[escape]
           |                +-pattern:
@@ -450,5 +462,9 @@ cases:
           |      |    +-relation_name: <nil>
           |      |    +-column_name: col1
           |      +-name: <nil>
-          +-tableref_list: []
+          +-tableref_list[list]:
+          |  +-0:
+          |    +-node[kTableRef]: kTable
+          |      +-table: t1
+          |      +-alias: <nil>
           +-window_list: []
