--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -80,7 +80,7 @@ jobs:
           - sql_sdk_test
           - sql_cluster_test
     env:
-      OPENMLDB_BUILD_TARGE: ${{ matrix.test_target }}
+      OPENMLDB_BUILD_TARGET: ${{ matrix.test_target }}
       TEST_TARGET: ${{ matrix.test_target }}
       TESTING_ENABLE: ON
       TEST_LEVEL: 0
