--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   build_and_cpp_ut:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
     env:
@@ -39,6 +39,18 @@ jobs:
           # delete thirdparty build directory($ROOT/.deps/) to save disk space
           make thirdpartybuild-clean
 
+      - name: run cpp
+        run: |
+          make test
+
+      - name: upload unit test results
+        if: always()
+        uses: actions/upload-artifact@v2
+        with:
+          name: linux-ut-result-cpp-${{ github.sha }}
+          path: |
+            reports/*.xml
+
       - name: pack OpenMLDB
         if: ${{ github.event_name == 'push' }}
         run: |
@@ -56,20 +68,8 @@ jobs:
           path: openmldb-*.tar.gz
           name: release-artifacts
 
-      - name: run cpp
-        run: |
-          make test
-
-      - name: upload unit test results
-        if: always()
-        uses: actions/upload-artifact@v2
-        with:
-          name: linux-ut-result-cpp-${{ github.sha }}
-          path: |
-            reports/*.xml
-
   sql_mode_sdk_test:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     container:
       image: ghcr.io/4paradigm/hybridsql:0.4.0
     strategy:
@@ -80,7 +80,7 @@ jobs:
           - sql_sdk_test
           - sql_cluster_test
     env:
-      OPENMLDB_BUILD_TARGE: ${{ matrix.test_target }}
+      OPENMLDB_BUILD_TARGET: ${{ matrix.test_target }}
       TEST_TARGET: ${{ matrix.test_target }}
       TESTING_ENABLE: ON
       TEST_LEVEL: 0
