Add getTableNames and getTable api in cluster router

--- a/java/openmldb-native/pom.xml
+++ b/java/openmldb-native/pom.xml
@@ -35,6 +35,12 @@
             <version>2.13.2</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.11.0</version>
+        </dependency>
     </dependencies>
 
     <build>
