--- a/java/openmldb-batch/pom.xml
+++ b/java/openmldb-batch/pom.xml
@@ -202,7 +202,7 @@
 		<!-- OpenMLDB -->
 		<dependency>
 			<groupId>com.4paradigm.openmldb</groupId>
-			<artifactId>openmldb-native</artifactId>
+			<artifactId>openmldb-jdbc</artifactId>
 			<version>0.4.0-SNAPSHOT</version>
 		</dependency>
 
