--- a/java/openmldb-batch/pom.xml
+++ b/java/openmldb-batch/pom.xml
@@ -191,7 +191,19 @@
 		<dependency>
 			<groupId>com.4paradigm.openmldb</groupId>
 			<artifactId>openmldb-jdbc</artifactId>
-			<version>0.4.0-SNAPSHOT</version>
+			<version>${project.parent.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.4paradigm.openmldb</groupId>
+			<artifactId>openmldb-spark-connector</artifactId>
+			<version>${project.parent.version}</version>
+			<exclusions>
+			    <exclusion>
+                    <groupId>com.4paradigm.openmldb</groupId>
+                    <artifactId>openmldb-jdbc</artifactId>
+			    </exclusion>
+			</exclusions>
 		</dependency>
 
 	</dependencies>
@@ -233,7 +245,7 @@
 				<version>3.0.0-M5</version>
 				<configuration>
 					<!-- <reuseForks>false</reuseForks> -->
-					<forkCount>4</forkCount>
+					<forkCount>1</forkCount>
 					<skipAfterFailureCount>1</skipAfterFailureCount>
 					<skipTests>false</skipTests>
 				</configuration>
