--- a/cases/query/const_query.yaml
+++ b/cases/query/const_query.yaml
@@ -70,17 +70,58 @@ cases:
       rows:
         - [1, "helloworldabc"]
   - id: 5
-    desc: 不依赖输入表cast常量
+    desc: cast常量 using CAST operator
     mode: request-unsupport
-    tags: ["TODO", "@chenjing, support const project node"]
     inputs:
       - columns: ["c1 int", "c2 string", "c5 bigint"]
         indexs: ["index1:c1:c5"]
         rows:
           - [1, "2020-05-22 10:43:40", 1]
     sql: |
-      select int(10) as c1, bigint(20) as c2;
+      select CAST (10 as int) as c1, CAST (10 as bigint) as c2, CAST (10 as float) as c3, CAST (10 as double) as c4, CAST (1590115460000 as timestamp) as c5, CAST ("2020-05-20" as date) as c6, CAST (10 as string) as c7;
     expect:
-      columns: ["c1 int", "c2 bigint"]
+      columns: ["c1 int", "c2 bigint", "c3 float", "c4 double", "c5 timestamp", "c6 date", "c7 string"]
       rows:
-        - [10, 20]
+        - [10, 10, 10.0, 10.0, 1590115460000, 2020-05-20, "10"]
+  - id: 6
+    desc: cast NULL常量 using CAST operator
+    mode: request-unsupport
+    inputs:
+      - columns: ["c1 int", "c2 string", "c5 bigint"]
+        indexs: ["index1:c1:c5"]
+        rows:
+          - [1, "2020-05-22 10:43:40", 1]
+    sql: |
+      select CAST (NULL as int) as c1, CAST (NULL as bigint) as c2, CAST (NULL as float) as c3, CAST (NULL as double) as c4, CAST (NULL as timestamp) as c5, CAST (NULL as date) as c6, CAST (NULL as string) as c7;
+    expect:
+      columns: ["c1 int", "c2 bigint", "c3 float", "c4 double", "c5 timestamp", "c6 date", "c7 string"]
+      rows:
+        - [NULL, NULL, NULL, NULL, NULL, NULL, NULL]
+  - id: 7
+    desc: cast常量 using type() function
+    mode: request-unsupport
+    inputs:
+      - columns: ["c1 int", "c2 string", "c5 bigint"]
+        indexs: ["index1:c1:c5"]
+        rows:
+          - [1, "2020-05-22 10:43:40", 1]
+    sql: |
+      select int(10) as c1, bigint(10) as c2, float(10) as c3, double(10) as c4, timestamp(1590115460000) as c5, date("2020-05-20") as c6, string(10) as c7;
+    expect:
+      columns: ["c1 int", "c2 bigint", "c3 float", "c4 double", "c5 timestamp", "c6 date", "c7 string"]
+      rows:
+        - [10, 10, 10.0, 10.0, 1590115460000, 2020-05-20, "10"]
+  - id: 8
+    desc: cast NULL常量 using type(NULL) function
+    mode: request-unsupport
+    inputs:
+      - columns: ["c1 int", "c2 string", "c5 bigint"]
+        indexs: ["index1:c1:c5"]
+        rows:
+          - [1, "2020-05-22 10:43:40", 1]
+    sql: |
+      select int(NULL) as c1, bigint(NULL) as c2, float(NULL) as c3, double(NULL) as c4, timestamp(NULL) as c5, date(NULL) as c6, string(NULL) as c7;
+    expect:
+      columns: ["c1 int", "c2 bigint", "c3 float", "c4 double", "c5 timestamp", "c6 date", "c7 string"]
+      rows:
+        - [NULL, NULL, NULL, NULL, NULL, NULL, NULL]
